--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-sizeme": "^3.0.2",
+    "react-type-animation": "^2.1.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.0"
   },
