--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
     "react-marquee-slider": "^1.1.5",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-sizeme": "^3.0.2",
+    "react-spring": "^9.6.1",
     "react-type-animation": "^2.1.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.0"
